# lumi

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3d7a9c2f1b80_focus_sessions.py  69d4c738deb6_initial_schema.py  7c2d9a0f4b1a_cleanup_invalid_timezones.py  9f1d2c3a4b5e_tasks_projects_suggestions.py  a14b9c27d530_planning_request_idempotency.py  a4c8d2e71f6b_work_block_contract.py  b8f6d2a91c4e_ui_events.py  d9e4b7a1c205_focus_break_cycles.py  (+5 more)
backend/tests/: assistant_cases.py  conftest.py  test_agent_cleanup_script.py  test_api.py  test_assistant_command_core.py  test_assistant_core_flows.py  test_assistant_eval_coverage.py  test_assistant_schemas.py  test_automations.py  test_bot_handlers.py  test_bot_media.py  test_calendar_private_notes.py  test_calendar_slots.py  test_calendar_sync.py  test_config.py  test_context_builder.py  test_focus_api.py  test_focus_insights.py  test_google_auth.py  test_google_calendar_connector.py  test_json_utils.py  test_language_preferences.py  test_llm_multimodal.py  test_media_understanding.py  test_memory_service.py  test_news_service.py  test_opportunity_engine.py  test_orchestrator.py  test_planning_settings.py  test_product_scope.py  test_product_v2_integration.py  test_projects_suggestions_api.py  test_qa_required.py  test_realtime.py  test_reflection_analysis.py  test_reminder_notifications.py  test_schedule_delivery.py  test_schedule_messages.py  test_scheduler.py  test_signal_extractor.py  (+9 more)
(+250 files in other folders)
