[project]
name = "lumi"
version = "0.1.0"
description = "Lumi — personal AI assistant in Telegram"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiogram>=3.15",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "greenlet>=3",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "tenacity>=9",
    "redis>=5",
    "arq>=0.26",
    "croniter>=5",
    "feedparser>=6.0.11",
    "google-api-python-client>=2.150",
    "google-auth>=2.35",
    "google-auth-oauthlib>=1.2",
    "caldav>=1.4",
    "cryptography>=43",
    "python-multipart>=0.0.12",
    # test/lint tools ship in the image on purpose: `make test`/`make lint` run in docker
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lumi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 110
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["E501", "B008"]  # B008: FastAPI Depends in defaults is idiomatic
